--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
-    "start": "webpack serve --host 0.0.0.0"
+    "start": "webpack serve --host 0.0.0.0",
+    "test": "jest"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.24",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
-    "typescript": "^4.3.4",
+    "typescript": "^4.3.5",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
