--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "minimal_starter",
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "threads": "^1.6.5"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^17.0.8",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^27.0.6",
+    "threads-plugin": "^1.4.0",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
